LogOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
